syntax = "proto3";
package trpc.test.helloworld;
import "validate.proto";
option java_package = "com.tencent.test.helloworld";
option java_outer_classname = "GreeterSvr";
// 请求协议头
message HelloRequest {
  string message = 1 [(validate.rules).string.min_len = 2];
}
// 响应协议头
message HelloResponse {
  string message = 1;
}
service Greeter {
  rpc sayHello (HelloRequest) returns (HelloResponse);
}